--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="style.css"      rel="stylesheet" type="text/css">
     <title>Test</title>
 </head>
 <body>
-    <h1>Ejemplo  Git</h1>
+    <h3>Ejemplo  Git Santiago </h3>
    
 </body>
 </html>
